fix lg overflow in mobile (#235)

--- a/content/scss/_c-menu.scss
+++ b/content/scss/_c-menu.scss
@@ -28,7 +28,7 @@ $g-c-menu-z: 60 !default;
 }
 
 .c-menu--large {
-  min-width: 22rem;
+  min-width: 13rem;
 }
 
 .c-menu.c-menu--visible.js-no-action {
